--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 <p class="indented" style="text-align: justify;">I am a dentist specializing in orthopedics with <strong>over 20 years of experience</strong>. My expertise lies in aesthetic dental prosthetics, including implant-based procedures. I employ a comprehensive range of both modern and classical methods for dental prosthetics, utilizing technologies with proven effectiveness and a solid scientific foundation.</p>
 <p class="indented" style="text-align: justify;">I collaborate with a team of specialists in various fields, including professional dental hygiene and teeth whitening, therapeutic dentistry (root canal treatment), surgery (bone and gum tissue plastic surgery, dental implant placement), and orthodontics (bite correction with braces and Invisalign).</p>
 <p class="indented" style="text-align: justify;">In my practice, I adhere to the principles of thorough diagnosis, meticulous preparation, precision, aesthetics, and reliability. I approach patients with care and respect, understanding that they entrust me with their health.</p>    
-<p class="indented" style="text-align: justify;"><em>I have proficiency in English at level B1 and in Spanish at level B2.</em></p>  
+<p class="indented" style="text-align: justify;"><em>I have proficiency in English at level B1 and in Spanish at level B1-B2.</em></p> 
+   
     </div>
     </section>
 
@@ -152,21 +153,20 @@
      <h2>EXPERIENCE</h2>
 <table>
   <tr>
-    <td valign="top">2003 - 2023</td>
+    <td valign="top">2004 - 2023</td>
     <td>
 <strong>Head doctor and prosthodontist</strong>
 <p>Atri-Dent LLC, Moscow, Russia</p>
 eMAX veneers, both finished and full (360 veneers)<br>
 Refractory Noritake veneers<br>
-eMAX ceramic inlays and onlays ("inley," "onley," "overley," and "pinley")<br>
+eMAX ceramic inlays and onlays (inley, onley, overley, pinley, crowns)<br>
 eMAX ceramic crowns and bridges (semi-crowns and full crowns)<br>
 Zirconium dioxide – culted post inlays, crowns, and bridge prosthetics<br>
 Classic metal-ceramic crowns and bridge prosthetics<br>
 Fixed and removable prosthetics on dental implants<br>
-Various clasp prosthetics – with locks, classic, splinting<br>
 Partial and full removable prosthetics, including those supported by implants<br>
-Conditionally removable prosthetics on implants according to the "All on 4" and "All on 6" systems<br>
-Temporary and permanent prosthetics on Astra Tech, MIS, Alpha Bio, Xive implants<br>
+Conditionally removable prosthetics on implants according to the "All on 4"system<br>
+Temporary and permanent prosthetics on Astra Tech, MIS, Alpha Bio, Xive implants, Ankylos<br>
     </td>
   </tr>
    <tr>
