--- a/index_es.html
+++ b/index_es.html
@@ -155,7 +155,7 @@
     <td valign="top">2003 - 2023</td>
     <td>
       <strong>Jefe de médicos y médico estomatólogo, prostodoncista</strong>
-      <p>La clínica privada «Atri-Dent LLC», Moscú, Rusia</p>
+      <p>La clínica privada "Atri-Dent LLC", Moscú, Rusia</p>
       Carillas eMAX, tanto terminadas como completas (360 carillas)<br>
 Carillas refractarias Noritake<br>
 Cerámicos eMAX (inley, onley, overley, pinley, coronas)<br>
@@ -164,7 +164,7 @@ Coronas y puentes cerámicos eMAX (coronas semi y coronas completas)<br>
 Coronas y prótesis de puente metal-cerámicas clásicas<br>
 Prótesis fijas y removibles sobre implantes dentales<br>
 Prótesis removibles parciales y completas, incluidas aquellas con soporte en implantes<br>
-Prótesis removibles condicionalmente sobre implantes según los sistemas «All on 4»<br>
+Prótesis removibles condicionalmente sobre implantes según los sistemas "All on 4"<br>
 Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, Xive, Ankylos<br>
     </td>
   </tr>
