--- a/index_es.html
+++ b/index_es.html
@@ -143,7 +143,7 @@
 <p class="indented" style="text-align: justify;">Soy un médico estomatólogo especializado en rehabilitación oral con prótesis con más de <strong>20 años de experiencia</strong>. Tengo un doctorado en medicina. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Utilizo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, empleando tecnologías con eficacia comprobada y una solida base científica.</p>
 <p class="indented" style="text-align: justify;">Colaboro con un equipo de especialistas en diversas áreas, que incluyen higiene dental profesional y blanqueamiento dental, odontología terapéutica (endodoncia), cirugía (cirugía plástica de tejido óseo y encías, colocación de implantes dentales) y ortodoncia.</p>
 <p class="indented" style="text-align: justify;">En mi práctica, me adhiero a los principios de un diagnóstico minucioso, preparación meticulosa, precisión, estetica y confiabilidad. Me acerco a los pacientes con cuidado y respeto, entendiendo que me confían su salud.</p>
-<p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en a nivel B1-B2.</em></p>
+<p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en a nivel B2.</em></p>
     </div>
     </section>
 
